feat: refactor navigation items into drawer item buttons

--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -1,5 +1,7 @@
 {
   "translation": {
+    "navigation.aurora-db": "Aurora DB",
+    "navigation.dynamo-db": "Dynamo DB",
     "side-menu.calculator": "Calculator"
   }
 }
