feat: request specific result and parsing

--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -6,6 +6,7 @@
     "rds-request.database": "Database",
     "rds-request.profile-name": "Profile Name",
     "rds-request.secret-arn": "Secret ARN",
+    "response-viewport.placeholder": "No result",
     "side-menu.calculator": "Calculator"
   }
 }
