--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -7,6 +7,7 @@
     "rds-request.cluster-arn": "Cluster ARN",
     "rds-request.database": "Database",
     "rds-request.profile-name": "Profile Name",
+    "workspace-service.new": "New {{type}}",
     "rds-request.secret-arn": "Secret ARN",
     "response-viewport.placeholder": "No result",
     "save-as": "Save as...",
